# crab

./: .gitignore  Crabfile  LICENSE  Taskfile.yml  init-template.sh  main.py  mypy.ini  pyproject.toml  server.py
.github/workflows/: lint.yml
crab/: cli.py  compose.py  diff.py  io.py  shell.py  tool.py
crab/process/: interference.py  liveness.py
crab/runner/: base_runner.py  parallel_runner.py  stdout_runner.py
crab/test/: test_sample.py
crab/writer/: __init__.py  base.py  compose_writer.py  csv_writer.py  html_writer.py  json_writer.py  parquet_writer.py
template/: common.py
