[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "crab"
version = "0.1.0"
description = "Description goes here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "minify-html>=0.18.1",
    "polars>=1.38.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pyrefly>=0.41.1",
    "ruff>=0.14.4",
    "pytest>=9.0.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[project.scripts]
crab = "crab.cli:main"
